feat :: completed the basic backend api for 9dot
